app/stylesheets/main.scss
/* ... */
.panel-container .close-button-mobile {
  position: absolute;
  right: 0;
  background: #757C87;
  width: 2rem;
  height: 1.75rem;
  text-align: center;
  line-height: 1.75rem;
  font-weight: bold;
  color: #fff;
  font-size: 2rem;
  top: 0;
  display: block;
}

@media #{$medium-only} {
  .profile {
    margin-left: 3rem;
  }
}

// Slider
.slide-in {
	visibility: hidden;
	transition:visibility 0s linear 0.2s,opacity 0.2s linear;
  padding-left: 0;
}

.slide-in.is-visible {
	visibility: visible;
  opacity: 1;
	transition: visibility 0s 0s;
  transition: opacity 0.3s ease-in;
}

.slide-in-header {
	position: absolute;
	top: -50px;
	width: 90%;
	height: 50px;
	transition: top 0.3s 0s;
}

.hide-on-mobile.is-visible {
  margin-left: 0;
}

@media #{$small-only} {
  .hide-on-mobile {
    display: none;
  }
  .content {
    height: 100%;
  }
}

@media #{$medium-only} {
  .hide-on-mobile {
    display: none;
  }
  .content {
    height: 100%;
  }
}

.is-visible .slide-in-header {
	top: 0;
	transition: top 0.3s 0.3s;
}
.arrow-left {
	width: 0;
	height: 0;
	border-top: 20px solid transparent;
	border-bottom: 20px solid transparent;
  border-right:20px solid #fff;
  position: absolute;
  left: -15px;
}

.panel-container {
  background: #fff;
  color: #3B4E6E;
  height: 100vh;
	transition-property: transform;
	transition-duration: 0.3s;
	transition-delay: 0.3s;
 	transform: translate3d(100%, 0, 0);
}

.is-visible .panel-container {
	transform: translate3d(0, 0, 0);
	transition-delay: 0s;
}
.panel-content {
  padding: 20px;
  height: 100vh;
  overflow-y: scroll;
}

.codestar-button {
  border: 1px solid white;
  background-color: transparent;
  text-transform: uppercase;
  font-weight: bold;
  padding-bottom: 0.6em;
}

.codestar-button:hover {
  background-color: rgba(255, 255, 255, 0.5);
}

.codestar-button:active {
  background-color: rgba(255, 255, 255, 0.7);
}

.codestar-button:focus {
  background-color: rgba(255, 255, 255, 0.3);
}

.codestar-button:visited {
  background-color: transparent;
}

.why {
  white-space: normal;
}

ul.why li:before,
ul.key_skills li:before {
  content: '+';
  font-size: 1.5em;
  font-weight: bold;
  padding-right: 0.5em;
  margin-left: -1em;
}

ul.key_skills li:before {
  margin-left: 0;
  padding-right: 0.2em;
}

ul.why li,
ul.key_skills li {
  list-style: none;
  line-height: normal;
  margin-bottom: 1.1em;
}

.team-link, .case-link {
  stroke-width: 1px;
  stroke: white;
}

#teamTagline {
  font-style: italic;
}

#map {
  width: 100%;
  height: 100%;
  filter: grayscale(100%);
  pointer-events: none;
}

.contact_form_container {
  padding-right: 0;
}

#contact_form {
  margin-left: 10px;
}

.map_container {
  padding-left: 0;
  position: relative;
  height: 100%;
}
#contact_form .row .columns {
  padding-right: 2px;
  padding-left: 0;
}

#map {
  position: absolute;
}

.contact_data_table {
  width: 100%;
  background: rgb(0, 32, 65);
  opacity: 0.8;
  position: absolute;
  z-index: 5;
  bottom: 0;
  margin-bottom: 0;
}

.contact_data_table table {
  margin-bottom: 0;
}

.contact_data_table tbody {
  background: none;
  border: none;
}

.contact_data_table td {
  padding: 1em;
}

.contact_data_table tr:nth-child(even) {
  background: none;
}

.contact_data_table .contact_icon {
  padding-right: 0.5em;
  text-align: right;
}

.contact_data_table .contact_info {
  padding-left: 0;
  padding-top: 1.4em;
}

.contact_button a {
  width: 100%;
  margin: 0;
}

.decorations2 {
  position: absolute;
  top: 0;
  z-index: 10;
}

#curved-lines {
    position: absolute;
    max-width: none;
    width: 100vw;
    height: 200vw;
    top: -100vw;
    transform: translateY(-50vh);
}
#big-lines {
    position: absolute;
    max-width: none;
    height: 100vh;
    width: 13.73vh;
    top: -100vh;
    left: -6.866vh;
    transform: translateX(50vw);
}
#small-lines {
    position: absolute;
    max-width: none;
    height: 100vh;
    width: 13.73vh;
    top: -100vh;
    left: -6.866vh;
    transform: translateX(50vw);
}

.featureTitle {
  text-transform: uppercase;
  font-weight: bold;
  font-size: 120%;
}

.featureIcon {
  height: 3em;
}

.featureIcon:hover, .featureTitle:hover {
  cursor: pointer;
}

.solar {
  width: 1px;
  border-spacing: 0;
  border-collapse: collapse;
  opacity: 0.1;
}

.array {
  padding: 0;
  perspective: 250px;
}

.panel {
  width: 40px;
  height: 40px;
  background-color: white;
  margin: 25px 25px 45px 25px;
}

#solararrayContainer {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 30;
}

.form-input:placeholder-shown {
  text-transform: uppercase;
  opacity: 1.0;
  background-color: rgba(255, 255, 255, 0.5);
  color: white;
  padding-left: 0.7em;
  padding-top: 0.85em;
}

.form-input::-webkit-input-placeholder{
  color: white;
}
.form-input::-moz-placeholder {
  color: white;
  text-transform: uppercase;
  opacity: 1.0;
  padding-left: 0.7em;
  padding-top: 0.85em;
}
.form-input::-ms-input-placeholder {
  color: white;
  text-transform: uppercase;
  opacity: 1.0;
  padding-left: 0.7em;
  padding-top: 0.85em;
}
.form-input:-ms-input-placeholder {
  color: white;
  text-transform: uppercase;
  opacity: 1.0;
  padding-left: 0.7em;
  padding-top: 0.45em;
}
.form-input::placeholder {
  color: white;
}

.form-input:focus {
  border: 2px solid rgb(0, 75, 145);
  background-color: rgba(255, 255, 255, 0.5);
}
.form-input {
  border: 2px solid rgba(255, 255, 255, 0.0);
  box-shadow: none;
  background-color: rgba(255, 255, 255, 0.5);
  // border: none;
  color: rgb(0, 75, 145);
  padding-left: 0.7em;
  padding-top: 0.85em;
  margin-bottom: 2px;
}

@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .form-input {
    padding-top: 0.4em;
  }
}

.form-error.is-visible {
  margin-top: 5px;
  margin-bottom: 0;
}

.columns-space {
  margin-top: 1em;
}

#bericht {
  height: 6em;
}

#form-buttons {
  text-align: right;
  margin-top: 1em;
  margin-right: 1em;
}
/* ... */

